unpackaged/main/default/objects/Clinical_Trial_Criteria__c/Clinical_Trial_Criteria__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Criteria</label>
    <nameField>
        <displayFormat>CTCID-{0000}</displayFormat>
        <label>Clinical Trial Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>