unpackaged/main/default/objects/Clinical_Trial_Criteria__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <referenceTo>Criteria__c</referenceTo>
    <relationshipLabel>Clinical Trial Criteria</relationshipLabel>
    <relationshipName>Clinical_Trial_Criteria</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>