unpackaged/main/default/objects/Clinical_Trial_Criteria__c/fields/Include_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Include_Exclude__c</fullName>
    <label>Include/Exclude</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>