unpackaged/main/default/objects/Clinical_Trial_Criteria__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Measure</valueSetName>
    </valueSet>
</CustomField>