unpackaged/main/default/objects/Clinical_Trial_Criteria__c/fields/Specific_Measure__c.field-meta.xml
<CustomField>
    <fullName>Specific_Measure__c</fullName>
    <label>Specific Measure</label>
    <type>TextArea</type>
</CustomField>